force-app/main/default/objects/ssot__MarketingChannelEngagedAudience__dlm/fields/ssot__AgeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AgeNumber__c</fullName>
    <label>Age</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AgeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>