force-app/main/default/objects/ssot__MarketingChannelEngagedAudience__dlm/fields/ssot__CompanySizeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__CompanySizeNumber__c</fullName>
    <label>Company Size</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CompanySizeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>