force-app/main/default/objects/ssot__MarketingChannelEngagedAudience__dlm/fields/ssot__IndustryName__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndustryName__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndustryName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>