force-app/main/default/objects/ssot__MarketingChannelEngagedAudience__dlm/fields/ssot__InterestList__c.field-meta.xml
<CustomField>
    <fullName>ssot__InterestList__c</fullName>
    <label>Interests</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InterestList</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>