force-app/main/default/objects/ssot__MarketingChannelEngagedAudience__dlm/fields/ssot__JobName__c.field-meta.xml
<CustomField>
    <fullName>ssot__JobName__c</fullName>
    <label>Job</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JobName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>