force-app/main/default/objects/ssot__MarketingChannelEngagedAudience__dlm/fields/ssot__RegionName__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegionName__c</fullName>
    <label>Region</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegionName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>